--- a/cpp/abplas/base/Makefile
+++ b/cpp/abplas/base/Makefile
@@ -11,14 +11,14 @@ clean:
 
 # Executables
 test_input.x: input.o lattice.o
-test_lattice.x: input.o lattice.o
+test_lattice.x: lattice.o
 test_struct.x: input.o lattice.o
 %.x: %.o 
 	$(CXX) $(CXXFLAGS) -lm -o $@ $^
 
 # Objects
+input.o: input.h consts.h lattice.h
 lattice.o: lattice.h consts.h
-input.o: input.h lattice.h consts.h
 test_input.o: input.h
 test_lattice.o: lattice.h
 test_struct.o: input.h lattice.h
